# bom-rep-assistance-model

./: README.md  payload.json  pyproject.toml  train.py
src/: server.py
src/domain/quote_bom/column_mapping/create_model/: __init__.py
src/domain/quote_bom/column_mapping/extract_features/: __init__.py
src/domain/quote_bom/column_mapping/train_dataset/: __init__.py
src/domain/quote_bom/column_mapping/train_model/: __init__.py
src/routers/: __init__.py
