[tool.poetry]
name = "bom-rep-assistance"
version = "0.1.0"
description = "Project description"
authors = ["Ajith Vikram"]
readme = "README.md"
license = "MIT"

# Disable installing the current project as a package
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow = "2.13.0"
numpy = "<1.27"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.group.dev]
optional = false

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
